target/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "<INVALID>", "<INVALID>", "'boolean'", 
                     "'break'", "'class'", "'continue'", "'do'", "'else'", 
                     "'extends'", "'float'", "'if'", "'int'", "'new'", "'string'", 
                     "'then'", "'for'", "'return'", "'true'", "'false'", 
                     "'void'", "'nil'", "'this'", "'final'", "'static'", 
                     "'to'", "'downto'", "'+'", "'-'", "'*'", "'/'", "'\\'", 
                     "'%'", "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", 
                     "'||'", "'&&'", "'!'", "'^'", "':='", "'='", "'['", 
                     "']'", "'{'", "'}'", "'('", "')'", "';'", "':'", "'.'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMENT_LINE", "COMMENT_BLOCK", 
                      "BOOLEAN", "BREAK", "CLASS", "CONTINUE", "DO", "ELSE", 
                      "EXTENDS", "FLOAT", "IF", "INT", "NEW", "STRING", 
                      "THEN", "FOR", "RETURN", "TRUE", "FALSE", "VOID", 
                      "NIL", "THIS", "FINAL", "STATIC", "TO", "DOWNTO", 
                      "ADDOP", "SUBOP", "MULOP", "I_DIV", "F_DIV", "MOD", 
                      "NOT_EQUAL", "EQUAL", "LESS", "GREATER", "LESS_OR_EQUAL", 
                      "GREATER_OR_EQUAL", "OR", "AND", "NOT", "CONCATENATION", 
                      "ASSIGN", "EQUAL_SIGN", "LSB", "RSB", "LP", "RP", 
                      "LB", "RB", "SEMI", "COLON", "DOT", "COMMA", "ID", 
                      "INT_LIT", "FLOAT_LIT", "STRING_LIT", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_decls = 1
    RULE_class_decl = 2
    RULE_extend_class = 3
    RULE_members = 4
    RULE_member = 5
    RULE_mutable_attribute_decl = 6
    RULE_immutable_attribute_decl = 7
    RULE_attribute_type = 8
    RULE_attribute_names = 9
    RULE_attribute_name = 10
    RULE_method_decl = 11
    RULE_normal_method = 12
    RULE_main_method = 13
    RULE_constructor = 14
    RULE_return_type = 15
    RULE_params = 16
    RULE_param = 17
    RULE_param_type = 18
    RULE_comma_sep_ids = 19
    RULE_bool_lit = 20
    RULE_array_lit = 21
    RULE_comma_sep_array_elmts = 22
    RULE_elmt = 23
    RULE_int_type = 24
    RULE_float_type = 25
    RULE_bool_type = 26
    RULE_string_type = 27
    RULE_void_type = 28
    RULE_array_type = 29
    RULE_expr = 30
    RULE_equality_expr = 31
    RULE_boolean_expr = 32
    RULE_bin_additive_expr = 33
    RULE_multiplicative_expr = 34
    RULE_concatenation_expr = 35
    RULE_not_expr = 36
    RULE_u_additive_expr = 37
    RULE_idx_expr = 38
    RULE_access_expr = 39
    RULE_new_expr = 40
    RULE_simple_expr = 41
    RULE_atom = 42
    RULE_literal = 43
    RULE_comma_sep_exprs = 44
    RULE_stmt = 45
    RULE_block_stmt = 46
    RULE_var_decl = 47
    RULE_assign_stmt = 48
    RULE_lhs = 49
    RULE_mutable_expr = 50
    RULE_array_ele = 51
    RULE_if_stmt = 52
    RULE_for_stmt = 53
    RULE_for_range = 54
    RULE_init_val = 55
    RULE_final_val = 56
    RULE_break_stmt = 57
    RULE_continue_stmt = 58
    RULE_return_stmt = 59
    RULE_method_invoc_stmt = 60

    ruleNames =  [ "program", "class_decls", "class_decl", "extend_class", 
                   "members", "member", "mutable_attribute_decl", "immutable_attribute_decl", 
                   "attribute_type", "attribute_names", "attribute_name", 
                   "method_decl", "normal_method", "main_method", "constructor", 
                   "return_type", "params", "param", "param_type", "comma_sep_ids", 
                   "bool_lit", "array_lit", "comma_sep_array_elmts", "elmt", 
                   "int_type", "float_type", "bool_type", "string_type", 
                   "void_type", "array_type", "expr", "equality_expr", "boolean_expr", 
                   "bin_additive_expr", "multiplicative_expr", "concatenation_expr", 
                   "not_expr", "u_additive_expr", "idx_expr", "access_expr", 
                   "new_expr", "simple_expr", "atom", "literal", "comma_sep_exprs", 
                   "stmt", "block_stmt", "var_decl", "assign_stmt", "lhs", 
                   "mutable_expr", "array_ele", "if_stmt", "for_stmt", "for_range", 
                   "init_val", "final_val", "break_stmt", "continue_stmt", 
                   "return_stmt", "method_invoc_stmt" ]

    EOF = Token.EOF
    T__0=1
    COMMENT_LINE=2
    COMMENT_BLOCK=3
    BOOLEAN=4
    BREAK=5
    CLASS=6
    CONTINUE=7
    DO=8
    ELSE=9
    EXTENDS=10
    FLOAT=11
    IF=12
    INT=13
    NEW=14
    STRING=15
    THEN=16
    FOR=17
    RETURN=18
    TRUE=19
    FALSE=20
    VOID=21
    NIL=22
    THIS=23
    FINAL=24
    STATIC=25
    TO=26
    DOWNTO=27
    ADDOP=28
    SUBOP=29
    MULOP=30
    I_DIV=31
    F_DIV=32
    MOD=33
    NOT_EQUAL=34
    EQUAL=35
    LESS=36
    GREATER=37
    LESS_OR_EQUAL=38
    GREATER_OR_EQUAL=39
    OR=40
    AND=41
    NOT=42
    CONCATENATION=43
    ASSIGN=44
    EQUAL_SIGN=45
    LSB=46
    RSB=47
    LP=48
    RP=49
    LB=50
    RB=51
    SEMI=52
    COLON=53
    DOT=54
    COMMA=55
    ID=56
    INT_LIT=57
    FLOAT_LIT=58
    STRING_LIT=59
    WS=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decls(self):
            return self.getTypedRuleContext(BKOOLParser.Class_declsContext,0)


        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.class_decls()
            self.state = 123
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Class_declContext,0)


        def class_decls(self):
            return self.getTypedRuleContext(BKOOLParser.Class_declsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decls" ):
                return visitor.visitClass_decls(self)
            else:
                return visitor.visitChildren(self)




    def class_decls(self):

        localctx = BKOOLParser.Class_declsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decls)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.class_decl()
                self.state = 126
                self.class_decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.class_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def members(self):
            return self.getTypedRuleContext(BKOOLParser.MembersContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def extend_class(self):
            return self.getTypedRuleContext(BKOOLParser.Extend_classContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl" ):
                return visitor.visitClass_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_decl(self):

        localctx = BKOOLParser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(BKOOLParser.CLASS)
            self.state = 132
            self.match(BKOOLParser.ID)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 133
                self.extend_class()


            self.state = 136
            self.match(BKOOLParser.LP)
            self.state = 137
            self.members()
            self.state = 138
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Extend_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_extend_class

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtend_class" ):
                return visitor.visitExtend_class(self)
            else:
                return visitor.visitChildren(self)




    def extend_class(self):

        localctx = BKOOLParser.Extend_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_extend_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(BKOOLParser.EXTENDS)
            self.state = 141
            self.match(BKOOLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MembersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(BKOOLParser.MemberContext,0)


        def members(self):
            return self.getTypedRuleContext(BKOOLParser.MembersContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_members

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMembers" ):
                return visitor.visitMembers(self)
            else:
                return visitor.visitChildren(self)




    def members(self):

        localctx = BKOOLParser.MembersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_members)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID, BKOOLParser.FINAL, BKOOLParser.STATIC, BKOOLParser.ID]:
                self.state = 143
                self.member()
                self.state = 144
                self.members()
                pass
            elif token in [BKOOLParser.RP]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mutable_attribute_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Mutable_attribute_declContext,0)


        def immutable_attribute_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Immutable_attribute_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Method_declContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = BKOOLParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_member)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.mutable_attribute_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.immutable_attribute_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.method_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mutable_attribute_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_type(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_typeContext,0)


        def attribute_names(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_namesContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_mutable_attribute_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutable_attribute_decl" ):
                return visitor.visitMutable_attribute_decl(self)
            else:
                return visitor.visitChildren(self)




    def mutable_attribute_decl(self):

        localctx = BKOOLParser.Mutable_attribute_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mutable_attribute_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 154
                self.match(BKOOLParser.STATIC)


            self.state = 157
            self.attribute_type()
            self.state = 158
            self.attribute_names()
            self.state = 159
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Immutable_attribute_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_type(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_typeContext,0)


        def attribute_names(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_namesContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_immutable_attribute_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImmutable_attribute_decl" ):
                return visitor.visitImmutable_attribute_decl(self)
            else:
                return visitor.visitChildren(self)




    def immutable_attribute_decl(self):

        localctx = BKOOLParser.Immutable_attribute_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_immutable_attribute_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 161
                    self.match(BKOOLParser.STATIC)


                self.state = 164
                self.match(BKOOLParser.FINAL)
                pass

            elif la_ == 2:
                self.state = 165
                self.match(BKOOLParser.FINAL)
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 166
                    self.match(BKOOLParser.STATIC)


                pass


            self.state = 171
            self.attribute_type()
            self.state = 172
            self.attribute_names()
            self.state = 173
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BKOOLParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BKOOLParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(BKOOLParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(BKOOLParser.STRING, 0)

        def array_type(self):
            return self.getTypedRuleContext(BKOOLParser.Array_typeContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_type" ):
                return visitor.visitAttribute_type(self)
            else:
                return visitor.visitChildren(self)




    def attribute_type(self):

        localctx = BKOOLParser.Attribute_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute_type)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.match(BKOOLParser.INT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(BKOOLParser.FLOAT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.match(BKOOLParser.BOOLEAN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 178
                self.match(BKOOLParser.STRING)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 179
                self.array_type()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 180
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_namesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_name(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_nameContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def attribute_names(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_namesContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_names

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_names" ):
                return visitor.visitAttribute_names(self)
            else:
                return visitor.visitChildren(self)




    def attribute_names(self):

        localctx = BKOOLParser.Attribute_namesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attribute_names)
        try:
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.attribute_name()
                self.state = 184
                self.match(BKOOLParser.COMMA)
                self.state = 185
                self.attribute_names()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.attribute_name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def EQUAL_SIGN(self):
            return self.getToken(BKOOLParser.EQUAL_SIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_name" ):
                return visitor.visitAttribute_name(self)
            else:
                return visitor.visitChildren(self)




    def attribute_name(self):

        localctx = BKOOLParser.Attribute_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_attribute_name)
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.match(BKOOLParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 191
                self.match(BKOOLParser.ID)
                self.state = 192
                self.match(BKOOLParser.EQUAL_SIGN)
                self.state = 193
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_method(self):
            return self.getTypedRuleContext(BKOOLParser.Normal_methodContext,0)

